provider/provider.yaml
apiVersion: v1
kind: Service
metadata:
  name: provider
spec:
  ports:
  - port: 8080
  type: ClusterIP
  selector:
    app: provider
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider
spec:
  selector:
    matchLabels:
      app: provider
  template:
    metadata:
      labels:
        app: provider
    spec:
      containers:
      - name: node
        image: gcr.io/jkwng-images/keda-bullmq-provider:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: 512Mi
          limits:
            cpu: "250m"
            memory: 512Mi
